# vision-desktop-automoation-projectTJM-Abdulrahman_Abufarag

./: README.md  main.py  pyproject.toml
Run Results (Full automation)/: post_10.txt
src/: api_client.py  automation.py  grounding.py  offline_data.py  utils.py
